# example-out-of-date-merges

./: README.md  pylock.toml  pyproject.toml
.github/workflows/: test.yml
src/example/: __main__.py  combine.py  main.py
tests/: test_combine.py  test_main.py
