[project]
name = "example"
version = "0.1.0"
description = "example"
authors = [
    {name = "sneakers-the-rat", email = "sneakers-the-rat@protonmail.com"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
tests = [
    "pytest>=9.0.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
test = "pytest"


[tool.pdm]
distribution = true
